# MILTemplate

./: .gitignore  README.md  config.yaml  pyproject.toml
scripts/: eval.py  inference.py  make_bags.py  preprocess_wsi.py  save_model.py  train.py
src/data/: datamodule.py  dataset.py
src/model/: abmil.py  factory.py  lightning.py  mil.py  utils.py
src/utils/: collate.py  config.py
tests/: test_collate_dataset.py  test_factory.py  test_integration_scripts.py  test_model_abmil.py
