[project]
name = "minimal_mil_pipeline"
version = "0.1.0"
description = "Minimal MIL pipeline: WSI -> features (LazySlide/wsidata) -> ABMIL training in PyTorch Lightning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Siemen Brussee" }]

dependencies = [
  "torch>=2.2",
  "lightning>=2.2",
  "tensorboard>=2.14",
  "torchvision>=0.17",
  "numpy>=1.24",
  "pandas>=2.0",
  "omegaconf>=2.3",
  "anndata>=0.10",
  # WSI + tiling + features
  "wsidata>=0.4",
  "lazyslide>=0.4",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.0",
  "ipykernel>=6.29",
]

[project.scripts]
mil-preprocess = "mil_lightning.scripts.preprocess_wsi:main"
mil-make-bags  = "mil_lightning.scripts.make_bags:main"
mil-train      = "mil_lightning.scripts.train:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mil_lightning"]

[tool.ruff]
line-length = 110
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true